Game leaving implemented and card playing is implemented